Fix scrollbars

--- a/stylesheets/find-and-replace.less
+++ b/stylesheets/find-and-replace.less
@@ -156,6 +156,7 @@
     overflow: auto;
     position: relative;
     padding: 0 @component-padding;
+    -webkit-flex: 1;
 
     .search-result {
       padding-top: 2px;
